--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "connect-session-knex": "^1.4.0",
     "cowsay": "^1.4.0",
     "ejs": "^2.5.7",
